21/07/09 Sylvain Gaillard
* Removed Coord and CoordsTools classes (move to Utils/Point2D and
Utils/Point2DTools)
* Code update to use Point2D class instead of Coord class

23/06/09 Julien Dutheil
* Code update for compatibility with seqlib. Changed pointers to refs when
retrieving sequences.

19/06/09 Sylvain Gaillard
* Removed all 'using namespace' statement from header files

18/06/09 Sylvain Gaillard
* Fix SequenceTools::getFrequencies call in SequenceStatistics
* Fix SequenceStatistics::getTransitionsTransversionsRatio

21/07/08 -*- Version 1.4.0 -*-

15/04/09 Sylvain Gaillard
* Moved to UTF8 encoding
* Fixed computations in Fu & Li D statistics

08/04/09 Sylvain Gaillard
* Fixed calls to Seq::SymbolListTools::getCounts

31/03/09 Sylvain Gaillard
* Fixed Doxygen documentation @author tags
* Fixed warnings in bpp::DarwinDon::write bpp::DarwinVarSingle::write and
  bpp::MonolocusGenotypeTools::buildMonolocusGenotypeByAlleleKey

19/01/09 Sylvain Gaillard
* Fixed bug in PolymorphismSequenceContainerTools::getSelectedSequences now
  set the sequence count properly.

16/01/09 Sylvain Gaillard
* Fixed method PolymorphismSequenceContainerTools::extractGroup which now
  return the extracted group and not all groups but the extracted one.

08/01/09 Sylvain Gaillard
* New method sample in PolymorphismSequenceContainerTools.
* Extend main page doxygen documentation.
* A bit of cleaning.

07/01/09 Céline Scornavacca & Julien Dutheil
* Bug fixed in clone method of PolymorphismSequenceContainer.

21/07/08 -*- Version 1.3.1 -*-

10/11/08 Sylvain Gaillard
* Fixed a bug in DataSet::getGroupName().

21/07/08 -*- Version 1.3.0 -*-

09/04/08 Sylvain Gaillard
* Added DarwinDon and DarwinVarSingle output class.

04/04/08 Sylvain Gaillard
* Added MultiAlleleMonolocusGenotype and MonolocusGenotypeTools class.
* Added GeneMapperCsvExport input class.

01/04/08 Sylvain Gaillard
* Fixed bug in SequenceStatistics::DVH (thanks to Alicia).

18/01/08 -*- Version 1.2.0 -*-
