@@ -63,12 +63,12 @@ namespace bpp
       /**
        * @brief Write a DataSet on ostream.
        */
-      virtual void write(ostream & os, const DataSet & data_set) const throw (Exception) = 0;
+      virtual void write(std::ostream & os, const DataSet & data_set) const throw (Exception) = 0;
 
       /**
        * @brief Write a DataSet in a text file.
        */
-      virtual void write(const string & path, const DataSet & data_set, bool overwrite) const throw (Exception) = 0;
+      virtual void write(const std::string & path, const DataSet & data_set, bool overwrite) const throw (Exception) = 0;
   };
 
 } //end of namespace bpp;
